# lintlang

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERABLES.md  GTM-PLAN.md  HERMENEUTICAL-TAXONOMY.md  INTENT.md  KNOWLEDGE-LEDGER.md  LICENSE  README.md  RELEASE-NOTES.md  SECURITY.md  SESSION-SUMMARY.md  TECHNICAL-ROADMAP.md  llms-full.txt  llms.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
assets/: preview-source.txt  preview-spec.md
evals/: sample-detection-rate.sh
gtm/: ICP-PROFILES.md
samples/: bad_agent_config.json  bad_system_prompt.txt  bad_tool_descriptions.yaml  clean_config.yaml  mixed_issues.yaml
src/lingdiag/: __init__.py  __main__.py  cli.py  patterns.py  report.py  scanner.py
src/lintlang/: __init__.py  __main__.py  cli.py  detectors_epistemic.py  epistemic.py  extractors.py  herm.py  parsers.py  patterns.py  report.py  scanner.py
tests/: conftest.py  test_cli.py  test_detectors_epistemic.py  test_docs_consistency.py  test_empirical_A09.py  test_extractors.py  test_parsers.py  test_patterns.py  test_scanner.py  test_verdict.py
