[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingdiag"
version = "0.1.0"
description = "Linguistic diagnostics for AI agent systems — detect language-to-action boundary failures"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "LPCI", email = "roli@hermes-labs.ai" },
]
keywords = [
    "ai", "agents", "diagnostics", "llm", "tool-calling",
    "prompt-engineering", "context-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
lingdiag = "lingdiag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lingdiag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
