[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lintlang"
version = "0.2.2"
description = "Static linter for AI agent configs, tool descriptions, and system prompts with zero-LLM CI gating"
readme = "README.md"
license = {text = "Apache-2.0"}
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Hermes Labs", email = "rbosch@lpci.ai"},
]
keywords = [
    "linter", "ai-agents", "llm", "tool-calling", "function-calling",
    "prompt-engineering", "context-engineering", "prompt-linter",
    "agent-config-linter", "prompt-linting", "static-prompt-analysis",
    "agent-testing", "static-analysis", "agentic",
    "structured-output", "prompt-validation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/roli-lpci/lintlang"
Documentation = "https://github.com/roli-lpci/lintlang#readme"
Repository = "https://github.com/roli-lpci/lintlang"
"Bug Tracker" = "https://github.com/roli-lpci/lintlang/issues"
Changelog = "https://github.com/roli-lpci/lintlang/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.12",
]

[project.scripts]
lintlang = "lintlang.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lintlang"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
